--- a/pages/ff149.md
+++ b/pages/ff149.md
@@ -10,6 +10,31 @@ external_manifest_url:
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
+<p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/04/17400EOS1d_9.24.04_178.jpg"></p>
+<h1 style="text-align:center">Askia Touré</h1>
+<p>Askia M. Touré is a poet, essayist, and editor who was one of the architects of the Black Arts Movement. As an editor for several influential publications, such as <i>Liberator Magazine</i>, and <i>The Journal of Black Poetry</i>, Touré helped shape the powerful voices of Black resistance and aesthetic theory of the 1960s and ‘70s. He was a member of the SNCC and the RAM, and paved the way for one of the first Africana Studies programs in the country during his time at San Francisco State University.</p>
+<p>Touré has published several poetry collections, including <i>Songhai</i>, <i>From the Pyramids to the Projects: Poems of Genocide & Resistance!</i>, which won the American Book Award for Literature, and <i>Dawnsong!</i>, which won the Stephen E. Henderson Poetry Award. Touré also received the Gwendolyn Brooks Lifetime Achievement Award.</p>
+<p>Touré’s work connects African history and mythology to the experiences of Black Americans. The voices of ancestrality work through his vivid depictions of African Gods and Goddesses, tracing their survival into the present day, and helping their teachings and deep wisdom live on. As Lorenzo Thomas notes in his book <i>Extraordinary Measures: Afrocentric Modernism and Twentieth-Century American Poetry</i>, "Touré was an opener of directions and new fields of thought. African American popular culture, as a vital expression of ancient traditions, was unselfconsciously admitted to his poems"<a href="#fn1"><sup>[1]</sup></a></p> 
+<hr>
+<p><a href="https://www.umass.edu/afroam/member/john-bracey">John H. Bracey Jr.</a> is a historian, political activist, and educator. He has co-edited several volumes to date, including <i>African American Women and the Vote: 1837-1965</i> and <i>African American Mosaic: A Documentary History from the Slave Trade to the Present</i>. He has taught in the Department of Afro-American Studies at the University of Massachusetts since 1972.</p>
+
+<p>In this interview, Bracey and Touré discuss the Negritude poets, the Black Arts Movement, the sacred archetypes of African people that Touré calls upon in his poetry, and Touré’s poetry collections.</p>
+
+<h3>More Information:</h3>
+
+<b>Interviews:</b>
+<ul><li><p><a href="https://www.thehistorymakers.org/biography/askia-toure-41">Interview</a> separated into clips, providing a detailed account of Touré’s life, focusing on his involvement in the Black Arts Movement. Access provided through JMU Libraries.</p></li></ul>
+<ul><li><p><a href="https://blackwritersmuseum.com/media.html">Interview</a> with Supreme Divine Dow. Touré discusses the spiritual dimension of his poetry, his influences, and tells stories about his life and work during the Black Arts Movement.</p></li></ul>
+
+<b>Essays:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/41163856">"Black Male/Female Relations: a Political Overview of the 1970s"</a>: Published in 1979, Touré engaged in the political struggle against the U.S. government and the exploitation of mass media. He calls for a renewed offensive against these various forces of oppression.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/j.ctt5vk2mr.16">"Keep on Pushin’: Rhythm and Blues as a Weapon"</a>: Part history, part manifesto, Touré explores the history of Black musicians as "Priest-Philosophers" who served to open up sites of radical resistance and Black liberation.</p></li></ul>
+
+<p>Poems:</p>
+<ul><li><p><a href="https://furiousflower.org/askia-toure">Selection</a> of annotated poems, including videos of Touré reading.</p></li></ul>
+<ul><li><p><a href="http://492cafe.org/audio/people/toure.askia">Selection</a> of live readings by Touré.</p></li></ul>
+<hr>
+<p><a name="fn1">[1]</a>: Thomas, Lorenzo. <i>Extraordinary Measures: Afrocentric Modernism and Twentieth-Century American Poetry</i>. Tuscaloosa: University of Alabama Press, 2000.</p>
 <h3>Preferred Citation:</h3>
 <i>Askia M. Touré Interview, 9/24/2004 (FF149)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF149. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
 <hr>
